--- a/output/index.html
+++ b/output/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOMO Fanhao Diary</title>
-    <link rel="icon" href="static/favicon.png" type="image/png">
-    <script src="static/js/lang-redirect.js"></script>
+    <link rel="icon" href="/static/favicon.png" type="image/png">
+    <script src="/static/js/lang-redirect.js"></script>
     <style>
         body {
             font-family: 'Noto Sans SC', 'Roboto', 'Segoe UI', sans-serif;
@@ -48,7 +48,7 @@
         <script>
             // Redirect fallback
             setTimeout(function() {
-                window.location.href = 'index_p1.html';
+                window.location.href = '/index_cn.html';
             }, 1500);
         </script>
     </div>
